# MessengerApp

./: .gitignore  .gitmodules  CMakeLists.txt  Client.cpp  Client.h  Connection.cpp  Connection.h  Messenger.cpp  Messenger.h  Server.cpp  Server.h  Socket.cpp  Socket.h  ThreadSafeQueue.h  main.cpp
ClientApp/: main.cpp
MessengerAppQt/: MessengerAppQt.cpp  MessengerAppQt.h  MessengerClientQt.cpp  MessengerClientQt.h  UsersModelQt.cpp  UsersModelQt.h  main.cpp
ServerApp/: main.cpp
ext/: CMakeLists.txt
ext/sqlite/: CMakeLists.txt
sources/ClientApp/: CMakeLists.txt
sources/ClientApp/include/ClientApp/: MessengerAppQt.h  MessengerClientQt.h  UsersModelQt.h
sources/ClientApp/src/: MessengerAppQt.cpp  MessengerClientQt.cpp  UsersModelQt.cpp  main.cpp
sources/NetworkingCore/: CMakeLists.txt
sources/NetworkingCore/include/NetworkingCore/: Client.h  Message.h  Messenger.h  Server.h  Socket.h  UsersDB.h
sources/NetworkingCore/src/: Client.cpp  Connection.cpp  Messenger.cpp  Server.cpp  Socket.cpp  UsersDB.cpp
sources/NetworkingCore/tests/: tests.cpp
sources/ServerApp/src/: main.cpp
src/: CMakeLists.txt
src/ClientApp/: CMakeLists.txt
src/ClientApp/include/ClientApp/: MessengerClientQt.h  SignUpDialogQt.h  UsersModelQt.h
src/ClientApp/src/: SignUpDialogQt.cpp  UsersModelQt.cpp  main.cpp
src/NetworkingCore/: CMakeLists.txt
src/NetworkingCore/include/NetworkingCore/: MessengerClient.h  MessengerDefines.h  MessengerServer.h  Server.h  Socket.h  UsersDatabase.h
src/NetworkingCore/src/: Connection.cpp  MessengerClient.cpp  MessengerServer.cpp  Socket.cpp  UsersDB.cpp  UsersDatabase.cpp
src/NetworkingCore/tests/: tests.cpp
src/ServerApp/: CMakeLists.txt
src/ServerApp/src/: main.cpp
